--- a/css/styles.css
+++ b/css/styles.css
@@ -23,4 +23,9 @@
   background-size: 100% auto;
   max-height: 100vh;
 }
+
+table.center {
+  margin-left: auto;
+  margin-right: auto;
+}
 /*# sourceMappingURL=styles.css.map */
