--- a/css/styles.scss
+++ b/css/styles.scss
@@ -17,3 +17,9 @@
   background-size: 100% auto;
   max-height: 100vh;
 }
+
+// Centre Table
+table.center {
+  margin-left:auto; 
+  margin-right:auto;
+}
