center aligned plots

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,4 +28,13 @@ table.center {
   margin-left: auto;
   margin-right: auto;
 }
+
+.graphs-center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 /*# sourceMappingURL=styles.css.map */
