--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,7 +13,7 @@
 .bg-img {
   height: 66vw;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/img/srikanta-h-u-upMISxb0WD0-unsplash.jpeg) no-repeat;
-  background-position: top center;
+  background-position: center;
   background-size: 100% auto;
   max-height: 100vh;
 }
