--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,8 @@
 
 .bg-img {
   height: 66vw;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(/img/srikanta-h-u-upMISxb0WD0-unsplash.jpeg) no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/img/srikanta-h-u-upMISxb0WD0-unsplash.jpeg) no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/img/srikanta-h-u-upMISxb0WD0-unsplash.jpeg") no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/srikanta-h-u-upMISxb0WD0-unsplash.jpeg") no-repeat;
   background-position: center;
   background-size: 100% auto;
   max-height: 100vh;
