local url to github url for csv data

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -12,7 +12,7 @@
 // Hero Banner Background Image
 .bg-img {
   height: 66vw;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/srikanta-h-u-upMISxb0WD0-unsplash.jpeg") no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://raw.githubusercontent.com/des-ant/2021_Twitter_Visualisation/master/img/srikanta-h-u-upMISxb0WD0-unsplash.jpeg") no-repeat;
   background-position: center;
   background-size: 100% auto;
   max-height: 100vh;
